opam-version: "1.2"
name: "influxdb-async"
version: "0.1.0"
maintainer: "Ryan Slade <ryanslade@gmail.com>"
authors: "Ryan Slade <ryanslade@gmail.com>"
homepage: "https://github.com/ryanslade/influxdb-ocaml"
bug-reports: "https://github.com/ryanslade/influxdb-ocaml/issues"
dev-repo: "https://github.com/ryanslade/influxdb-ocaml.git"
build: [["jbuilder" "build" "-p" name "-j" jobs]]
depends: [
  "jbuilder" {build}
  "base"
  "alcotest" {test}
  "influxdb"
  "async"
]
available: [
  ocaml-version >= "4.04.0"
]
