opam-version: "1.2"
name: "influxdb-lwt"
version: "0.1.0"
maintainer: "Ryan Slade <ryanslade@gmail.com>"
authors: "Ryan Slade <ryanslade@gmail.com>"
homepage: "https://github.com/ryanslade/influxdb-ocaml"
bug-reports: "https://github.com/ryanslade/influxdb-ocaml/issues"
dev-repo: "https://github.com/ryanslade/influxdb-ocaml.git"
build: [["dune" "build" "-p" name "-j" jobs]]
depends: [
  "dune" {build}
  "base"
  "alcotest" {test}
  "influxdb"
  "lwt"
  "cohttp"
  "cohttp-lwt-unix"
]
available: [
  ocaml-version >= "4.04.0"
]
